[package]
name = "tokio-proxy-protocol"
version = "0.1.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.2", features=["full"]}
pin-project = "0.4"
log ="0.4"

bytes =  "0.5"
thiserror = "1.0"

futures = "0.3"

[dev_dependencies]
env_logger = "0.7"
anyhow ="1.0"
structopt = "0.3"

